--- a/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
+++ b/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FootballNeighborhood.Domain\FootballNeighborhood.Domain.csproj" />
+    <ProjectReference Include="..\FootballNeighborhood.Infrastructure\FootballNeighborhood.Infrastructure.csproj" />
+    <ProjectReference Include="..\FootballNeighborhood.Services\FootballNeighborhood.Services.csproj" />
+  </ItemGroup>
+
 </Project>
