--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-D14FQH2;Database=FootballNeighborhood;TrustServerCertificate=True;Integrated Security=True;Trusted_Connection=True;Encrypt=True;"
   }
 }
