--- a/FootballNeighborhood.Services/FootballNeighborhood.Services.csproj
+++ b/FootballNeighborhood.Services/FootballNeighborhood.Services.csproj
@@ -17,4 +17,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Authentications\" />
+	</ItemGroup>
+
 </Project>
