--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-D14FQH2;Database=FootballNeighborhood;TrustServerCertificate=True;Integrated Security=True;Trusted_Connection=True;Encrypt=True;"
+  },
+  "Token": {
+    "Secrete": "<REPLACE ON PRODUCTION>",
+    "Salt": "<REPLACE ON PRODUCTION>"
+    "AccessTokenTimeValid": 30, // in minutes
+    "RefreshTokenTimeValid": 7, // days
   }
 }
