--- a/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
+++ b/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FootballNeighborhood.Domain\FootballNeighborhood.Domain.csproj" />
+    <ProjectReference Include="..\FootballNeighborhood.Infrastructure\FootballNeighborhood.Infrastructure.csproj" />
+    <ProjectReference Include="..\FootballNeighborhood.Resources\FootballNeighborhood.Resources.csproj" />
     <ProjectReference Include="..\FootballNeighborhood.Services\FootballNeighborhood.Services.csproj" />
   </ItemGroup>
 
