Implementacja logowania po stronie frontend'u

--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -10,8 +10,8 @@
   },
   "Token": {
     "Secrete": "<REPLACE ON PRODUCTION>",
-    "Salt": "<REPLACE ON PRODUCTION>"
+    "Salt": "<REPLACE ON PRODUCTION>",
     "AccessTokenTimeValid": 30, // in minutes
-    "RefreshTokenTimeValid": 7, // days
+    "RefreshTokenTimeValid": 7 // days
   }
 }
