--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-D14FQH2;Database=FootballNeighborhood;TrustServerCertificate=True;Integrated Security=True;Trusted_Connection=True;Encrypt=True;"
   },
-  "Token": {
+  "TokenOptions": {
     "Secrete": "<REPLACE ON PRODUCTION>",
     "Salt": "<REPLACE ON PRODUCTION>",
     "AccessTokenTimeValid": 30, // in minutes
