--- a/FootballNeighborhood.DbMigrator/FootballNeighborhood.DbMigrator.csproj
+++ b/FootballNeighborhood.DbMigrator/FootballNeighborhood.DbMigrator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Scripts\1.CreateUserTable.sql" />
     <None Remove="Scripts\2.CreateMatchTable.sql" />
+    <None Remove="Seeds\1.SeedBasicData.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +18,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\2.CreateMatchTable.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Seeds\1.SeedBasicData.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
@@ -38,10 +42,6 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Seeds\" />
   </ItemGroup>
 
 </Project>
