--- a/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
+++ b/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Features" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
