--- a/FootballNeighborhood.Resources/FootballNeighborhood.Resources.csproj
+++ b/FootballNeighborhood.Resources/FootballNeighborhood.Resources.csproj
@@ -12,12 +12,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AuthenticationsRescource.resx</DependentUpon>
     </Compile>
+    <Compile Update="MatchesResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MatchesResources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="AuthenticationsRescource.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>AuthenticationsRescource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="MatchesResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>MatchesResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
