--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -13,5 +13,13 @@
     "Salt": "<REPLACE ON PRODUCTION>",
     "AccessTokenTimeValid": 30, // in minutes
     "RefreshTokenTimeValid": 7 // days
+  },
+  "EmailOptions": {
+    "FromAddress": "football.neighborhood.app@gmail.com",
+    "UserName": "FootballNeighborhoodApp",
+    "Password": "qpaeogsxkvxdzpjh",
+    "Port": 587,
+    "Ssl": 465,
+    "SmtpServer": "smtp.gmail.com"
   }
 }
