--- a/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
+++ b/FootballNeighborhood.Logic/FootballNeighborhood.Logic.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\FootballNeighborhood.Services\FootballNeighborhood.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ConfirmUsers\Queries\" />
+  </ItemGroup>
+
 </Project>
