--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -17,7 +17,7 @@
   "EmailOptions": {
     "FromAddress": "football.neighborhood.app@gmail.com",
     "UserName": "FootballNeighborhoodApp",
-    "Password": "qpaeogsxkvxdzpjh",
+    "Password": "",
     "Port": 587,
     "Ssl": 465,
     "SmtpServer": "smtp.gmail.com"
