Confirmation user and user register implemenation.

--- a/FootballNeighborhood.Api/appsettings.Development.json
+++ b/FootballNeighborhood.Api/appsettings.Development.json
@@ -14,12 +14,19 @@
     "AccessTokenTimeValid": 30, // in minutes
     "RefreshTokenTimeValid": 7 // days
   },
+  "ConfirmationOptions": {
+    "ConfirmationValidTimeMinutes" : 30
+  },
   "EmailOptions": {
     "FromAddress": "football.neighborhood.app@gmail.com",
     "UserName": "FootballNeighborhoodApp",
     "Password": "",
     "Port": 587,
     "Ssl": 465,
-    "SmtpServer": "smtp.gmail.com"
+    "SmtpServer": "smtp.gmail.com",
+    "EmailTemplatePath": "wwwroot\\EmailsTemplates"
+  },
+  "FrontendOptions": {
+    "Url": "http://localhost:4200"
   }
 }
