--- a/FootballNeighborhood.DbMigrator/FootballNeighborhood.DbMigrator.csproj
+++ b/FootballNeighborhood.DbMigrator/FootballNeighborhood.DbMigrator.csproj
@@ -10,11 +10,15 @@
   <ItemGroup>
     <None Remove="Scripts\1.CreateUserTable.sql" />
     <None Remove="Scripts\2.CreateMatchTable.sql" />
+    <None Remove="Scripts\3.CreateUserConfirmation.sql" />
     <None Remove="Seeds\1.SeedBasicData.sql" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Scripts\1.CreateUserTable.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Scripts\3.CreateUserConfirmation.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts\2.CreateMatchTable.sql">
